@@ -210,8 +210,6 @@ public class OverseerCollectionMessageHandler implements OverseerMessageHandler 
 
     NamedList results = new NamedList();
     try {
-      // force update the cluster state
-      zkStateReader.updateClusterState();
       CollectionParams.CollectionAction action = CollectionParams.CollectionAction.get(operation);
       if (action == null) {
         throw new SolrException(ErrorCode.BAD_REQUEST, "Unknown operation:" + operation);
@@ -2267,10 +2265,12 @@ public class OverseerCollectionMessageHandler implements OverseerMessageHandler 
     // For tracking async calls.
     HashMap<String,String> requestMap = new HashMap<>();
     sendShardRequest(node, params, shardHandler, asyncId, requestMap);
-    
+
     collectShardResponses(results, true, "ADDREPLICA failed to create replica", shardHandler);
     
     completeAsyncRequest(asyncId, requestMap, results);
+
+    waitForCoreNodeName(collection, node, coreName);
   }
 
   private void processResponses(NamedList results, ShardHandler shardHandler) {
